--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
   android:layout_height="match_parent">
 
   <com.google.android.material.chip.Chip
+    android:id="@+id/chip"    
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Hello user!"
