added colrs&added curvedtextclock

--- a/app/src/main/res/layout/testmain.xml
+++ b/app/src/main/res/layout/testmain.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.dudu.wechat.widget.CurvedTextClock
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center|top"
+        />
     <Button
-    android:id="@+id/test"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:text="test"/>
+        android:id="@+id/test"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="test"
+        android:layout_gravity="center"/>
 
-</LinearLayout>
+</FrameLayout>
