--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <!-- Base application theme. -->
-  <style name="Base.AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
-    <!-- Customize your theme here. -->
-    <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-  </style>
+     
+    <style
+        name="Base.AppTheme"
+        parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:textColor">@color/textColorNormal</item>
+        <item name="android:windowBackground">#000000</item>
+    </style>
+    <style
+        name="AppTheme"
+        parent="Base.AppTheme" />
 
-  <style name="AppTheme" parent="Base.AppTheme" />
 </resources>
