--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         name="Base.AppTheme"
         parent="Theme.Material3.Dark.NoActionBar">
         <item name="android:textColor">@color/textColorNormal</item>
-        <item name="android:windowBackground">#000000</item>
+        <item name="android:windowBackground">@android:color/black</item>
     </style>
     <style
         name="AppTheme"
