NetworkUtil改造和方屏界面调整

--- a/app/src/main/res/layout-round/activity_qr_code_login.xml
+++ b/app/src/main/res/layout-round/activity_qr_code_login.xml
@@ -33,7 +33,7 @@
                     android:textColor="@color/textColorGreen"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="扫码登录微信" />
+                    android:text="扫码登录" />
                 <FrameLayout
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
