--- a/app/src/main/res/layout/activity_qr_code_login.xml
+++ b/app/src/main/res/layout/activity_qr_code_login.xml
@@ -6,23 +6,26 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="@android:color/black">
-
-    <TextClock
+    <FrameLayout
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="16sp" />
-    <TextView
-        android:id="@+id/title"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:textSize="18sp"
-        android:textColor="@color/textColorGreen"
-        android:textStyle="bold"
-        android:text="扫码登录微信"
-        android:layout_gravity="center" />
-
+        android:layout_width="match_parent">
+        <TextClock
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="end"
+            android:format12Hour="hh:mm"
+            android:format24Hour="hh:mm"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textSize="16sp"
+            android:textColor="@color/textColorGreen"
+            android:textStyle="bold"
+            android:text="扫码登录"
+            android:layout_gravity="start" />
+    </FrameLayout>
     <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -33,8 +36,8 @@
             android:indeterminateTint="@color/buttonColorGreen"
             android:layout_gravity="center" />
         <com.google.android.material.card.MaterialCardView
-            android:layout_height="120dp"
-            android:layout_width="120dp"
+            android:layout_height="140dp"
+            android:layout_width="140dp"
             android:visibility="invisible"
             app:strokeColor="#00000000"
             app:cardBackgroundColor="#00000000"
@@ -50,16 +53,15 @@
         </com.google.android.material.card.MaterialCardView>
 
     </FrameLayout>
-
+    
     <TextView
         android:id="@+id/login_tip_tv"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textColor="@color/textColorDarker"
-        android:text="请使用手机\n微信扫码登录"
+        android:text="请使用手机微信扫码登录"
         android:layout_gravity="center" />
-    
+
 </LinearLayout>
