--- a/app/src/main/res/layout/activity_qr_code_login.xml
+++ b/app/src/main/res/layout/activity_qr_code_login.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/textColorGreen"
+            android:textColor="@color/globalGreen"
             android:textStyle="bold"
             android:text="扫码登录"
             android:layout_gravity="start" />
@@ -33,7 +33,7 @@
         <ProgressBar
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:indeterminateTint="@color/buttonColorGreen"
+            android:indeterminateTint="@color/globalGreen"
             android:layout_gravity="center" />
         <com.google.android.material.card.MaterialCardView
             android:layout_height="140dp"
