--- a/app/src/main/res/layout/testmain.xml
+++ b/app/src/main/res/layout/testmain.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
     <androidx.wear.widget.CurvedTextView
+        android:id="@+id/isround"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center|top"
