--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,11 @@
      
     <style
         name="Base.AppTheme"
-        parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+        parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="android:textColor">@color/textColorNormal</item>
         <item name="android:windowBackground">@android:color/black</item>
+        <item name="colorControlNormal">#FFFFFF</item>
+        <item name="colorControlActivated">@color/globalGreen</item>
     </style>
     <style
         name="AppTheme"
