--- a/app/src/main/res/layout/activity_qr_code_login_round.xml
+++ b/app/src/main/res/layout/activity_qr_code_login_round.xml
@@ -70,7 +70,11 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="8sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <FrameLayout
         android:id="@+id/title_layout"
         android:layout_height="wrap_content"
