使用线程池

--- a/app/src/main/res/layout/activity_qr_code_login.xml
+++ b/app/src/main/res/layout/activity_qr_code_login.xml
@@ -29,7 +29,8 @@
     <FrameLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp">
         <com.mikhaellopez.circularprogressbar.CircularProgressBar
             android:layout_height="70dp"
             android:layout_width="70dp"
