做了一下主页

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="textColorDark">#D2D3D3</color>
      
     <color name="textColorDarker">#A6A6A7</color>
+    
+    <color name="indicatorColorSelected">#4D4D4D</color>
 </resources>
