--- a/app/src/main/res/layout/activity_qr_code_login.xml
+++ b/app/src/main/res/layout/activity_qr_code_login.xml
@@ -8,7 +8,8 @@
     android:background="@android:color/black">
     <FrameLayout
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="6dp">
         <TextClock
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
