--- a/app/src/main/res/layout/activity_qr_code_login_round.xml
+++ b/app/src/main/res/layout/activity_qr_code_login_round.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@android:color/black"
-    android:orientation="vertical">
+    android:background="@android:color/black">
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_height="wrap_content"
